# geometry_simd

./: .gitignore  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  bench_intersect.cpp  bench_simplify.cpp  test_data.cpp  test_data.h
include/geom_simd/: clip.h  geom_simd.h  polygon.h
include/geom_simd/internal/: simplify_internal.h
src/: CMakeLists.txt  geometry.cpp  intersect_scalar.cpp  polygon.cpp  simplify.cpp  simplify_scalar.cpp
src/simd/: intersect_avx512.cpp  simplify_avx2.cpp  simplify_avx512.cpp  simplify_neon.cpp
tests/: CMakeLists.txt  test_geometry.cpp  test_intersect.cpp  test_polygon.cpp  test_simplify.cpp
